# ArithmeticTree

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: test-worflow.yml
lib/: BST_Visualizer.cpp  BST_Visualizer.hpp
lib/bst_visualizer/: BST_Visualizer.cpp  BST_Visualizer.hpp
src/: ABaumVCpp.cpp  Bracket.hpp  Evaluator.cpp  Evaluator.hpp  Num.hpp  Number.hpp  Op.hpp  Operator.cpp  Operator.hpp  Order.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Utilities.cpp  Utilities.hpp  Vis.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
src/Token Classes/: Bracket.hpp  Number.cpp  Number.hpp  Operator.cpp  Operator.hpp  Token.cpp  Token.hpp
tests/: UtilitiesTest.cpp  test1.cpp
